--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Springfield Photography</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
-        <img src="#" alt="logo image" class="logo">
+        <img src="./images/logo.png" alt="logo image" class="logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="porfolio.html">Portfolio</a></li>
-                <li><a href="contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div class="hero">
-            <h1></h1>
-            <p></p>
-            <img src="" alt="">
+        <div class="hero" height=10vh>
+            <h1>Springfield Photography</h1>
+            <p>I can shoot the kids, hang the family, frame them all.</p>
         </div>
         <div class="details">
-            <h2></h2>
-            <p></p>
+            <h2>Want to make an appointment?</h2>
+            <p><a href="contact.html">Click here!</a></p>
         </div>
     </main>
     <footer></footer>
