--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <div class="hero" height=10vh>
+        <div class="hero">
             <h1>Springfield Photography</h1>
             <p>I can shoot the kids, hang the family, frame them all.</p>
         </div>
