--- a/portfolio.html
+++ b/portfolio.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Springfield Photography</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
-        <img src="#" alt="logo image" class="logo">
+        <img src="./images/logo.png" alt="logo image" class="logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="porfolio.html">Portfolio</a></li>
-                <li><a href="contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        
+        <h2>Here are some of my pictures</h2>
+        <div class="photos">
+            <img src="./images/photo1.jpg" alt="">
+            <img src="./images/photo2.jpg" alt="">
+            <img src="./images/photo3.jpg" alt="">
+            <img src="./images/photo4.jpg" alt="">
+            <img src="./images/photo5.jpg" alt="">
+            <img src="./images/photo6.jpg" alt="">
+            <img src="./images/photo7.png" alt="">
+        </div>
     </main>
     <footer></footer>
 </body>
