--- a/contact.html
+++ b/contact.html
@@ -26,11 +26,13 @@
 
             </p>
         </div>
-        <a href="mailto:homer@simpson.com">homer@simpson.com</a><br>
-        <a href="tel: 555-1173655">555-1173655</a><br>
-        <p>742 Evergreen Terrace<br>
-        86542 Springfield<br>
-    USA</p>
+        <div class="info">
+            <a href="mailto:homer@simpson.com">homer@simpson.com</a><br>
+            <a href="tel: 555-1173655">555-1173655</a><br>
+            <p>742 Evergreen Terrace<br>
+            86542 Springfield<br>
+            USA</p>
+        </div>
     </main>
 </body>
 </html>
