--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
     <main>
         <div class="hero">
             <h1>Springfield Photography</h1>
-            <p>I can shoot the kids, hang the family, frame them all.</p>
+            <p>
+                My name is Homer Simpson.
+                <br>
+                I can shoot the kids, hang the family, frame them all.
+            </p>
         </div>
         <div class="details">
             <h2>Want to make an appointment?</h2>
-            <p><a href="contact.html">Click here!</a></p>
+            <p><a href="contact.html" class="btn">Click here!</a></p>
         </div>
     </main>
     <footer></footer>
